Dom avec button inc

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <header class="banner">
-        <h1><span class="E-fruits">E</span>-fruits</h1>
+        <h1><span class="E-fruits">E</span> - fruit Market</h1>
     </header>
     <section>
         <div class="container">
@@ -33,10 +33,11 @@
                     <img src="img/fruits/apple.png" alt="apple">
                     <h3>Apple</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">3.00 OXF</span>
-                    <div class="btn">
+                    <span class="prise">300</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -46,10 +47,11 @@
                     <img src="img/fruits/banana.png" alt="apple">
                     <h3>Banana</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">7.00 OXF</span>
-                    <div class="btn">
+                    <span class="prise">700</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -59,10 +61,11 @@
                     <img src="img/fruits/pineapple.png" alt="apple">
                     <h3>Pineapple</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">6.00 OXF</span>
-                    <div class="btn">
+                    <span class="prise">600</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -72,10 +75,11 @@
                     <img src="img/fruits/orange.png" alt="apple">
                     <h3>Orange</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">2.00 OXF</span>
-                    <div class="btn">
+                    <span class="prise">200</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -85,10 +89,11 @@
                     <img src="img/fruits/grape.png" alt="apple">
                     <h3>Grape</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">7.00 OXF</span>
-                    <div class="btn">
+                    <span class="prise">700</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -98,10 +103,11 @@
                     <img src="img/fruits/mango.png" alt="apple">
                     <h3>Mango</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima provident itaque, fugit dolor nisi labore similique soluta et ab voluptates eligendi omnis porro, iste odit, repudiandae accusamus beatae cumque. Facilis.</p>
-                    <span class="prise">2.50 OXF</span>
-                    <div class="btn">
+                    <span class="prise">250</span>
+                    <span>XOF</span>
+                    <div class="element">
                         <span class="minus">-</span>
-                        <span class="num">0</span>
+                        <span class="num">1</span>
                         <span class="plus">+</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -109,6 +115,11 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer_inner">
+            <p class="footer_text">Copyright © <Span class="superskill">Workshop-DOM 2023</Span></p>
+        </div>
+    </footer>
     <script src="main.js"></script>   
 </body>
 </html>
