workshop DOM End

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <section>
         <div class="container">
             <h1 class="products">Our products</h1>
-            <div class="amount">
+            <!--Prix total-->
+            <div id="amount">
                 <i class="fa-solid fa-hand-holding-dollar" style="color: #ffffff;"> : </i>
                 <Span id="prixTotal">0</Span>
                 <span>XOF</span>
@@ -48,11 +49,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i id= "btn" class="fa-solid fa-heart"></i>
+                    <!--llike button-->
+                    <div id="likeBtn">
+                        <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <!--box-2-->
@@ -64,11 +66,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i id= "btn" class="fa-solid fa-heart"></i>
+                    <!--like button-->
+                    <div id="likeBtn">
+                      <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <!--box-3-->
@@ -80,11 +83,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i id= "btn" class="fa-solid fa-heart"></i>
+                     <!--like button-->
+                    <div id="likeBtn">
+                        <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <!--box-4-->
@@ -96,11 +100,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i id= "btn" class="fa-solid fa-heart"></i>
+                     <!--like button-->
+                    <div id="likeBtn">
+                        <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <!--box-5-->
@@ -112,11 +117,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i id= "btn" class="fa-solid fa-heart"></i>
+                     <!--like button-->
+                    <div id="likeBtn">
+                        <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <!--box-6-->
@@ -128,11 +134,12 @@
                     <span>XOF</span>
                     <div class="element">
                         <button class="minus">-</button>
-                        <span class="num">1</span>
+                        <span class="num">0</span>
                         <button class="plus">+</button>
                     </div>
-                    <div class="like">
-                        <i oneclick="Toggle()" id= "btn" class="fa-solid fa-heart"></i>
+                     <!--like button-->
+                    <div id="likeBtn">
+                        <i onclick="Toggle()" class="fa-solid fa-heart"></i>
                     </div>
                 </div>
             </div>
